2009-02-05  Claudio Saavedra  <csaavedra@igalia.com>

	* examples/hildon-icon-sizes-example.c: (main): Remove obsolete
	icon sizes.

2009-02-05  Claudio Saavedra  <csaavedra@igalia.com>

	Patch by Mox Soini (ext-mox.soini@nokia.com)

	* src/hildon-banner.c: (hildon_banner_show_animation):
	use stylus size instead of obsolete note size.
	* src/hildon-defines.h: Update icon sizes.

2009-02-05  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector-entry.c:
	(hildon_touch_selector_entry_init): Disable unsupported
	input modes.
	(hildon_touch_selector_entry_get_text_column): Emit a warning
	if an unsupported input modes is used and explicitile state
	these modes in the documentation.

	Fixes: NB#99802 (Hildon touch selector entry not working properly
	for some of the input modes)

2009-02-05  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_init): Added the changed signal handlers of
	the adjustments.

	Fixes: NB#100320 (HildonPannableArea does not listen to
	GtkAdjustment "change" signals)

2009-02-04  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt
	* src/hildon-window-private.h
	* src/hildon-window.h
	* src/hildon-window.c (hildon_window_init)
	(hildon_window_realize, hildon_window_unrealize)
	(hildon_window_map, hildon_window_unmap, hildon_window_expose)
	(hildon_window_size_request, hildon_window_size_allocate)
	(hildon_window_forall, hildon_window_show_all)
	(hildon_window_destroy, +paint_edit_toolbar)
	(+hildon_window_set_edit_toolbar):
	New hildon_window_set_edit_toolbar() method, to add a
	HildonEditToolbar to a window without having to pack it manually.

	Reorganize hildon_window_size_allocate()

	* src/hildon-edit-toolbar.c: Update documentation.

	* examples/hildon-edit-toolbar-example.c (edit_window): Update
	example to use the new API.

	Fixes: NB#98039 (Wishlist: hildon_window_add_edit_toolbar())

2009-02-04  Alberto Garcia  <agarcia@igalia.com>
